1. sendbox UI 2. profile picker 3. fix some JS defects on IE9 Compatibility view

--- a/trunk/web/css/base.css
+++ b/trunk/web/css/base.css
@@ -223,6 +223,42 @@ label.title, label .title {
 	border-radius:3px;
 }
 
+.btn-cmt {
+	color: white;
+	border-color: #AAB0BB #525A69 #333842;
+	background-color: #525B69;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, .4);
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+	background: url(../images/btn_cmt_bg.png) 0 0 repeat-x;
+}
+
+.btn-cmt:hover {
+	background-position: 0 -24px;
+}
+
+.btn-spl {
+	display: inline-block;
+	padding: 2px 12px 4px;
+	font-size: 11px;
+	font-weight: bold;
+	line-height: 14px;
+	color: #292B30;
+	border-top: 1px solid #B4B6B9;
+	border-bottom: 1px solid #F2F3F3;
+	background-color: #C3C6CB;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, .27);
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	background: url(../images/btn_spl_bg.png) 0 0 repeat-x;
+}
+
+.btn-spl:hover {
+	background-position: 0 -20px;
+}
+
 a, a:hover, a:visited, a:focus {
 	text-decoration: none;
 }
